[metadata]
name = keefind
summary = Utility to easy find in keepass database
description-file =
    README
author = Stanislaw Bogatkin
author-email = sbog@sbog.ru
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
version = 0.1.0

[files]
packages =
    keefind

[entry_points]
console_scripts =
    kf = keefind.kf:main

[pbr]
warnerrors = True
